--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <script src="https://unpkg.com/jquery"></script>
   <script src="https://unpkg.com/bootstrap"></script>
 
-  <link rel="stylesheet" 
+  <link rel="stylesheet"
         href="https://www.unpkg.com/bootstrap-icons/font/bootstrap-icons.css">
   <link rel="stylesheet" href="/static/stylesheets/style.css">
   <link rel="shortcut icon" href="/static/favicon.ico">
@@ -55,8 +55,15 @@
             <img src="{{ g.user.image_url }}" alt="{{ g.user.username }}">
           </a>
         </li>
-        <li><a href="/messages/new">New Message</a></li>
-        <li><a href="/logout">Log out</a></li>
+        <li><button type="submit" class="btn btn-sm btn-primary" href="/messages/new">New Message</button></li>
+
+        <li>
+        <form action="/logout" method="POST">
+          {{g.csrf_form.hidden_tag()}}
+          <button type="submit" class="btn btn-sm btn-primary">Logout</button>
+        </form>
+      </li>
+
       {% endif %}
 
     </ul>
