--- a/templates/users/edit.html
+++ b/templates/users/edit.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<!-- add labels -->
+
   <div class="row justify-content-md-center">
     <div class="col-md-4">
       <h2 class="join-message">Edit Your Profile.</h2>
@@ -14,6 +14,7 @@
           {% for error in field.errors %}
             <span class="text-danger">{{ error }}</span>
           {% endfor %}
+          {{ field.label }}
           {{ field(placeholder=field.label.text, class="form-control") }}
         {% endfor %}
 
