--- a/templates/messages/show.html
+++ b/templates/messages/show.html
@@ -9,10 +9,9 @@
       <li class="list-group-item">
 
         <a href="{{ url_for('show_user', user_id=message.user.id) }}">
-          <img src="{{ message.user.image_url }}"
-               alt=""
-               class="timeline-image">
+          <img src="{{ message.user.image_url }}" alt="" class="timeline-image">
         </a>
+
 
         <div class="message-area">
           <div class="message-heading">
@@ -22,20 +21,17 @@
 
             {% if g.user %}
             {% if g.user.id == message.user.id %}
-            <form method="POST"
-                  action="/messages/{{ message.id }}/delete">
+            <form method="POST" action="/messages/{{ message.id }}/delete">
               {{ g.csrf_form.hidden_tag() }}
               <button class="btn btn-outline-danger">Delete</button>
             </form>
             {% elif g.user.is_following(message.user) %}
-            <form method="POST"
-                  action="/users/stop-following/{{ message.user.id }}">
+            <form method="POST" action="/users/stop-following/{{ message.user.id }}">
               {{ g.csrf_form.hidden_tag() }}
               <button class="btn btn-primary">Unfollow</button>
             </form>
             {% else %}
-            <form method="POST"
-                  action="/users/follow/{{ message.user.id }}">
+            <form method="POST" action="/users/follow/{{ message.user.id }}">
               {{ g.csrf_form.hidden_tag() }}
               <button class="btn btn-outline-primary btn-sm">
                 Follow
@@ -46,8 +42,26 @@
           </div>
           <p class="single-message">{{ message.text }}</p>
           <span class="text-muted">
-              {{ message.timestamp.strftime('%d %B %Y') }}
-            </span>
+            {{ message.timestamp.strftime('%d %B %Y') }}
+          </span>
+
+          <div class="d-block">
+
+            {% if message in g.user.liked_messages %}
+            <form method="POST" action="/messages/{{ message.id }}/like/delete">
+              {{ g.csrf_form.hidden_tag() }}
+              <span>{{ message.liked_by|length }}</span>
+              <button class="btn btn-default"><i class="bi bi-heart fs-3"></i></button>
+            </form>
+            {% else %}
+            <form method="POST" action="/messages/{{ message.id }}/like">
+              {{ g.csrf_form.hidden_tag() }}
+              <span>{{ message.liked_by|length }}</span>
+              <button class="btn btn-default"><i class="bi bi-heart fs-3"></i></button>
+            </form>
+            {% endif %}
+
+          </div>
         </div>
       </li>
     </ul>
