--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -20,7 +20,36 @@
               {{ message.timestamp.strftime('%d %B %Y') }}
             </span>
         <p>{{ message.text }}</p>
+
+
+        <div class="d-block">
+
+          {% if message in g.user.messages %}
+
+            <span>{{ message.liked_by|length }}</span>
+            <i class="bi bi-heart-fill fs-3"></i>
+
+          {% elif message in g.user.liked_messages%}
+
+          <form method="POST" action="/messages/{{ message.id }}/like/delete">
+            {{ g.csrf_form.hidden_tag() }}
+            <span>{{ message.liked_by|length }}</span>
+            <button class="btn btn-default"><i class="bi bi-heart-fill fs-3"></i></button>
+          </form>
+
+          {% else %}
+
+          <form method="POST" action="/messages/{{ message.id }}/like">
+            {{ g.csrf_form.hidden_tag() }}
+            <span>{{ message.liked_by|length }}</span>
+            <button class="btn btn-default"><i class="bi bi-heart fs-3"></i></button>
+          </form>
+
+          {% endif %}
+
       </div>
+    </div>
+
     </li>
 
     {% endfor %}
