--- a/templates/users/show_likes.html
+++ b/templates/users/show_likes.html
@@ -25,7 +25,13 @@
 
           {% if message in g.user.messages %}
 
-            <span>{{ message.liked_by|length }} Likes</span>
+            <span>{{ message.liked_by|length }}
+              {% if message.liked_by|length == 1 %}
+                Like
+              {% else %}
+                Likes
+              {% endif %}
+            </span>
 
           {% elif message in g.user.liked_messages%}
 
