Added tests for user model, message model, user views.

--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -3,6 +3,7 @@
 {% block body_class %}onboarding{% endblock %}
 
 {% block content %}
+<!-- TEST: signup.html -->
 
   <div class="row justify-content-md-center">
     <div class="col-md-7 col-lg-5">
