--- a/templates/users/followers.html
+++ b/templates/users/followers.html
@@ -4,6 +4,8 @@
 <div class="col-sm-9">
   <div class="row">
 
+    <!-- TEST: followers.html -->
+
     {% for follower in user.followers %}
 
     <div class="col-lg-4 col-md-6 col-12">
