--- a/templates/users/following.html
+++ b/templates/users/following.html
@@ -3,6 +3,8 @@
 <div class="col-sm-9">
   <div class="row">
 
+    <!-- TEST: following.html -->
+
     {% for followed_user in user.following %}
 
     <div class="col-lg-4 col-md-6 col-12">
