--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 <!-- TODO: For user's own messages just say "likes" instead of hearts-->
 
+ <!-- TEST: home.html -->
 {% extends 'base.html' %}
 {% block content %}
   <div class="row">
